<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WebViews</string>
    <string name="Account">Account</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="AutoLogin">AutoLogin</string>
    <string name="hint">Type something here</string>
    <string name="Send">Send</string>
    <string name="More">More</string>
    <string name="talk_name">小明</string>
    <string name="title_back">back</string>
    <string name="title_text">text</string>
    <string name="title_edit">edit</string>
    <string name="Receive">Receive</string>
    <string name="WeChat">WeChat</string>
    <string name="Contacts">Contacts</string>
    <string name="Discover">Discover</string>
    <string name="Me">Me</string>
    <string name="search">search</string>
    <string name="add">add</string>
    <string name="select_photo">select_photo</string>
    <string name="take_photo">take_photo</string>
    <string name="tab_item_home">"测试1"</string>
    <string name="tab_item_category">"测试2"</string>
    <string name="tab_item_down">"测试3"</string>
    <string name="tab_item_user">"测试4"</string>
    <string name="saoyisao">扫一扫</string>
    <string name="souyisou">搜一搜</string>
    <string name="pengyouquan">朋友圈</string>
    <string name="createdb">创建数据库</string>
    <string name="addData">添加数据</string>
    <string name="deleteData">删除数据</string>
    <string name="circle_photo">circle_photo</string>
    <string name="photo">photo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
