<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DataActivity">

    <Button
        android:id="@+id/createdb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createdb"/>
    <Button
        android:id="@+id/addData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addData"/>
    <Button
        android:id="@+id/deleteData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteData"/>


    <!--水平滚动显示-->
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fadingEdge="none"
        android:overScrollMode="never"
        android:scrollbars="none" >
        <ListView
            android:id="@+id/data_list_view"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:fadingEdge="none"
            android:overScrollMode="never"
            android:scrollbars="none" >
        </ListView>
    </HorizontalScrollView>
</LinearLayout>