<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/talk_view"
        android:layout_width="0dp"
        android:layout_weight="8"
        android:layout_height="match_parent"
        android:layout_gravity="left">
    </ListView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent">

            <Button
                android:id="@+id/fragment_wechat"
                android:name="com.example.administrator.WeChats.Fragment.FragmentWeChat"
                android:layout_width="match_parent"
                android:text="@string/WeChat"
                android:layout_height="0dp"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/fragment_contacts"
                android:name="com.example.administrator.WeChats.Fragment.FragmentContacts"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/Contacts"
                />
            <Button
                android:id="@+id/fragment_discover"
                android:name="com.example.administrator.WeChats.Fragment.FragmentDiscover"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/Discover"
               />
            <Button
                android:id="@+id/fragment_me"
                android:name="com.example.administrator.WeChats.Fragment.FragmentMe"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/Me"
                />

        <com.example.administrator.WeChats.ViewIndicator
            android:id="@+id/indicator"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </com.example.administrator.WeChats.ViewIndicator>
    </LinearLayout>

</LinearLayout>